# eye-track

./: .gitignore  README.md  README.zh-CN.md  main.py  pyproject.toml  wrangler.toml
.github/workflows/: release.yml
docs/: replication_plan.md  session_log.md
src/: __init__.py  eye_tracker_3d.py  gl_sphere.py  pupil_detector.py
subtitles/: download_youtube_subs_bot.py
subtitles/jeoresearch/: 20230613 Mitigation of VR Sickness during Locomotion with a Motion-Based Dynamic Vision Modulator.txt  20230628 Fast Monitor Switching In Virtual Reality.txt  20230705 Pointing and Typing in VR Headsets.txt  20230724 A Look at the Brains of Virtual Organisms.txt  20230725 Playing catch in the Varjo XR-3 (with the HP G2 VR backpack).txt  20230726 VR Visual Deficit Simulation for Physical Diagnosis.txt  20230729 Using Eye Tracking as a Privacy Screen in Virtual Reality.txt  20230912 Eye-tracked Simulation of Visual Deficits in Virtual Reality.txt  20230918 An Eye-tracked Swipe Keyboard for Hands-free Typing in Augmented and Virtual Reality.txt  20231006 Immersive Eye Tracking and Visualization in Virtual Reality.txt  20231010 A First-person View of BPPV Vertigo in Virtual Reality.txt  20231028 How to Build Your Own Marques Brownlee Studio in VR.txt  20231029 JEOresearch - A channel about helping people through AR and VR.txt  20231107 Simulation of Astigmatism in Virtual Reality.txt  20231117 Drumming with Shaders in Virtual Reality.txt  20231203 VR simulation of starbursting, halos, and ghosting after laser eye surgery.txt  20231209 Ultra High Fidelity 3D Eye Tracking.txt  20240304 Alleviating the Uncanny Valley Problem in Facial Model Mapping Using Direct Texture Transfer.txt  20240305 IEEEVR 2024 Visual Deficit Suite Demonstration.txt  20240313 Eye Tracking for Easy Selection in AR and VR - EyeShadows.txt  20240330 Augmented Reality Cyclocomputers.txt  20240408 New VR Tech from 2024.txt  20240409 Simulation of Fluid-Object Interactions.txt  20240505 A Lightweight Python Eye Tracker (open sourced).txt  20240509 Augmented reality, eye tracking, haptics, and interaction highlights @JEOresearch.txt  20240511 An OpenCV Toolkit for Learning Image Processing.txt  20240511 Climbing Wall for Research - Time Lapse of Route Setting from Scratch.txt  20240602 How Pupil Fitting Works in Eye Tracking Algorithms.txt  20240613 Head-tracked Subtitles Using Augmented Reality.txt  20240625 Using VR to Help Artists with Parkinson's Disease.txt  20240725 Real-time Subtitles Using Face Tracking.txt  (+22 more)
web/: server.py
(+40 files in other folders)
