[project]
name = "eye-tracking"
version = "0.1.0"
description = "Open-source 3D eye tracking platform using affordable IR cameras. Cross-platform (macOS, Windows, Linux)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["eye-tracking", "computer-vision", "opencv", "gaze-estimation", "3d-tracking"]
dependencies = [
    "numpy>=1.26.0",
    "opencv-python>=4.8.0",
    "pyopengl>=3.1.0",
    "pyqt5>=5.15.0",
]

