[project]
name = "eyetrack"
version = "0.5.4"
description = "Open-source 3D eye tracking platform using affordable IR cameras. Cross-platform (macOS, Windows, Linux)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["eye-tracking", "computer-vision", "opencv", "gaze-estimation", "3d-tracking"]
dependencies = [
    "numpy>=1.26.0",
    "opencv-python>=4.8.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "wsproto>=1.2.0",
]

[dependency-groups]
dev = ["ruff>=0.8.0"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/gl_sphere.py" = ["F403", "F405"]
"web/server.py" = ["E402"]
"web/app/main.py" = ["E402"]
"src/pupil_detector.py" = ["F841"]
